samples/_failures_safe/1761550078_db0ee2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93465858.c: In function ‘main’:
./samples/SAFE/__tmp_93465858.c:139:17: error: expected ‘)’ at end of input
  139 |     if (len == 0
      |        ~        ^
      |                 )
./samples/SAFE/__tmp_93465858.c:139:5: error: expected declaration or statement at end of input
  139 |     if (len == 0
      |     ^~
